Developed UI to shows details info of user

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">StackUsers</string>
     <string name="search">Search</string>
+    <string name="achievements">Achievements</string>
 </resources>
